--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
         <script language="javascript" type="text/javascript" src="plinko/ball.js"></script>
         <script language="javascript" type="text/javascript" src="plinko/peg.js"></script>
         <script language="javascript" type="text/javascript" src="plinko/boundary.js"></script>
+        <script language="javascript" type="text/javascript" src="plinko/bucket.js"></script>
     </div>
     <table class="splitstatetable">
         <tr>
