--- a/public/index.html
+++ b/public/index.html
@@ -45,13 +45,14 @@
         <input type="button" id="connectButton" value="connect">
     </div>
     <div>
-        <h1>Plinko Board:</h1>
-        <script language="javascript" type="text/javascript" src="plinko/pegPop.js"></script>
-        <script language="javascript" type="text/javascript" src="plinko/sketch.js"></script>
-        <script language="javascript" type="text/javascript" src="plinko/ball.js"></script>
-        <script language="javascript" type="text/javascript" src="plinko/peg.js"></script>
-        <script language="javascript" type="text/javascript" src="plinko/boundary.js"></script>
-        <script language="javascript" type="text/javascript" src="plinko/bucket.js"></script>
+        <div>
+            <script language="javascript" type="text/javascript" src="plinko/pegPop.js"></script>
+            <script language="javascript" type="text/javascript" src="plinko/sketch.js"></script>
+            <script language="javascript" type="text/javascript" src="plinko/ball.js"></script>
+            <script language="javascript" type="text/javascript" src="plinko/peg.js"></script>
+            <script language="javascript" type="text/javascript" src="plinko/boundary.js"></script>
+            <script language="javascript" type="text/javascript" src="plinko/bucket.js"></script>
+        </div>
     </div>
     <table class="splitstatetable">
         <tr>
@@ -78,6 +79,53 @@
             </td>
         </tr>
     </table>
+    <div class="leaderboard">
+        <h1>Plinko Leaderboard:</h1>
+        <div>
+            <table>
+                <tr class="player top-three">
+                    <td id="1st">
+                    </td>
+                    <td class="username">
+                    </td>
+                    <td class="points">
+                    </td>
+                </tr>
+                <tr class="player top-three">
+                    <td id="2nd">
+                    </td>
+                    <td class="username">
+                    </td>
+                    <td class="points">
+                    </td>
+                </tr>
+                <tr class="player top-three">
+                    <td id="3rd">
+                    </td>
+                    <td class="username">
+                    </td>
+                    <td class="points">
+                    </td>
+                </tr>
+                <tr class="player rest">
+                    <td id="4th">
+                    </td>
+                    <td class="username">
+                    </td>
+                    <td class="points">
+                    </td>
+                </tr>
+                <tr class="player rest">
+                    <td id="5th">
+                    </td>
+                    <td class="username">
+                    </td>
+                    <td class="points">
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
 
 </html>
