--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,9 @@
             Top Banner
         </div>
         <div id="game-canvas">
-            
+            <div class="free-plays">
+                FREE PLAYS
+            </div>
         </div>
         <div class="notification-banner">
             <div class="notification">
